crates/analyzer/tests/snapshots/errors__emittable_not_implementable.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: struct OutOfReachMarker is private
  ┌─ compile_errors/emittable_not_implementable.fe:1:31
  │
1 │ use std::context::{Emittable, OutOfReachMarker}
  │                               ^^^^^^^^^^^^^^^^ OutOfReachMarker

error: the struct `OutOfReachMarker` is private
   ┌─ compile_errors/emittable_not_implementable.fe:6:24
   │
 6 │   fn emit(self, _ val: OutOfReachMarker) {
   │                        ^^^^^^^^^^^^^^^^ this struct is not `pub`
   │
   ┌─ src/context.fe:13:8
   │
13 │ struct OutOfReachMarker {}
   │        ---------------- `OutOfReachMarker` is defined here
   │
   = `OutOfReachMarker` can only be used within `context`
   = Hint: use `pub` to make `OutOfReachMarker` visible from outside of `context`


